--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
   <table> 
+    <tr>
     <td><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo"></a></td>
     <td><p> Check out upcoming events and sign-up at our <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p></td>
-
-    <td>
+    </tr>
+    <tr><td>
+      Upcoming events <br>
     <iframe src="https://calendar.google.com/calendar/embed?src=22a89df73912262111d8998d9aa85b5ebf363e8b7f07fd78e2f3dbad315e85ab%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </td>
+    </td></tr>
   </table>
   
 <h2>Discussion</h2>
