--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
     <td><p> Check out upcoming events and sign-up at our <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p></td>
     </tr>
     <tr><td>
-      Upcoming events <br>
-    <iframe src="https://calendar.google.com/calendar/embed?src=22a89df73912262111d8998d9aa85b5ebf363e8b7f07fd78e2f3dbad315e85ab%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </td></tr>
+    <iframe src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23B39DDB&ctz=America%2FNew_York&mode=AGENDA&showCalendars=0&showTabs=0&showPrint=0&showTitle=1&showDate=0&title=614ACMW%20Events&src=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=czhsMzdicjh1b2pvbnBiazM0OXRybm8zOThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%233F51B5&color=%23F6BF26" style="border:solid 1px #777" width="800" height="300" frameborder="0" scrolling="no"></iframe>
+      </td></tr>
   </table>
   
 <h2>Discussion</h2>
