--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
     <td><p> Check out upcoming events and sign-up at our <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p></td>
     </tr>
     <tr><td></td><td>
-    <iframe src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23B39DDB&ctz=America%2FNew_York&mode=AGENDA&showCalendars=0&showTabs=0&showPrint=0&showTitle=1&showDate=0&title=614ACMW%20Events&src=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=czhsMzdicjh1b2pvbnBiazM0OXRybm8zOThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%233F51B5&color=%23F6BF26" style="border:solid 1px #777" width="800" height="300" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23B39DDB&ctz=America%2FNew_York&mode=AGENDA&showTabs=0&showPrint=0&showCalendars=0&title=614ACMW%20Events&src=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=aWc4dHA0b2huazJxYjQzMWN0ZG9wYnZ2NTBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=czhsMzdicjh1b2pvbnBiazM0OXRybm8zOThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23F09300&color=%237986CB&color=%233F51B5" style="border:solid 1px #777" width="800" height="300" frameborder="0" scrolling="no"></iframe>
       </td></tr>
   </table>
   
