--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
  
 <h2 id="about">About ACM-W, ACM and 614ACMW</h2>
 
-<h3> 614 ACM-W is an ACM-W Professional Chapter serving the Columbus, Ohio and Franklin County area. </h3>
+<h3> 614 ACM-W is an ACM-W Professional Chapter serving the Columbus, Ohio and Franklin County area. We are governed by <a href="bylaws.html">ACM rules and bylaws.</a> </h3>
   
 <dl> 
   <dt>What is <a href="women.acm.org">ACM-W?</a></dt>
