--- a/bylaws.html
+++ b/bylaws.html
@@ -1,3 +1,4 @@
+<pre>
 Article I
 Name
 
@@ -92,4 +93,5 @@ Dissolution of the Chapter
 
 1. Dissolution of this Chapter by consent of the members shall consist of unanimous agreement of all its officers together with a majority vote at a meeting which has been publicized in advance to all members of the Chapter for the purpose of taking this vote.
 
-2. Should this Chapter be dissolved, its assets and liabilities shall be transferred to ACM and shall be supervised by the ACM Finance Director.
+2. Should this Chapter be dissolved, its assets and liabilities shall be transferred to ACM and shall be supervised by the ACM Finance Director. </pre>
+
