--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 <h3>614 ACM-W Officers</h3>
 <dl>
 <dt><a href="https://www.linkedin.com/in/bettina-bair/">Bettina Bair</a></dt>
-  <dd>retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter</dd>
+  <dd>Setired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter</dd>
   
 <dt><a href="https://www.linkedin.com/in/amanda-kauppila-59914724/">Amanda Kauppila</a></dt>
-  <dd>software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter</dd>
+  <dd>Software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter</dd>
 
 <dt><a href="https://www.linkedin.com/in/tanyabw/">Dr. Tanya Berger-Wolf</a></dt>
-<dd>  Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</dd>
+<dd>Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</dd>
 
 </dl>
 
@@ -130,6 +130,15 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 
 <div class="footer">
   <p>(c) 2023 Central Ohio ACM-W Professional Chapter</p>
+  <table>
+    <tr><td><a href="mailto://614acmw@proton.me">Email</a></td></tr>
+<tr><td><a href="https://calendar.google.com/calendar/u/0?cid=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Calendar</a></td></tr>
+  <tr> 
+  <td><a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="50" width="50" alt="linkedIn logo"></a></td>
+  <td><<a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="50" width="50" alt="facebook logo"></a></td>
+ <td><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo"></a></td>
+   </tr></table>
+
 </div> <!-- end of footer -->
    
 </body>
