--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   <p>(c) 2023 Central Ohio ACM-W Professional Chapter</p>
   <table>
     <tr><td><a href="mailto://614acmw@proton.me">Email</a></td></tr>
-<tr><td><a href="https://calendar.google.com/calendar/u/0?cid=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Calendar</a></td></tr>
+    <tr><td><a href="https://calendar.google.com/calendar/u/0?cid=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Calendar</a></td></tr>
   <tr> 
-  <td><a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="50" width="50" alt="linkedIn logo"></a></td>
-  <td><<a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="50" width="50" alt="facebook logo"></a></td>
+  <td><a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png" height="30" width="30" alt="linkedIn logo"></a></td>
+  <td><a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="50" width="50" alt="facebook logo"></a></td>
  <td><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo"></a></td>
    </tr></table>
 
