--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@ Interested in hearing about 614acmw events and activities?
 
 </dl>
 
+<!-- Collect interest 
 <h2 id="contact">Be a Member. Be a Speaker. Be both!</h2>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
-
+-->
   
 </div> <!-- end of content -->
 
