--- a/index.html
+++ b/index.html
@@ -68,17 +68,16 @@
 </li><li>Member Badge image for email and webpage
 </ul>
 
-
+<h2>Events </h2>
 <div class="form-container row">
 <div class="text-center branding">
 <p id="error-msg"></p>
 </div>
 <div class="panel panel-default" id="forms">
 <div class="panel-heading">
-Interested in hearing about 614acmw events and activities? 
 <form role="form" id="theForm" name="myForm" method="POST" action="stl.cfm">
 <fieldset>
-<legend>Add your email here!</legend>
+<legend>Add your email here to hear about new events and activities!</legend>
 <div class="form-group row top-20">
 <div class="col-sm-2 col-sm-offset-1">
 <label for="add_email" class="control-label form-adjust">Email*</label>
@@ -100,8 +99,6 @@ Interested in hearing about 614acmw events and activities?
 </div>
 </div>
 
-  
-<h2 id="events">Events</h2>
   <table> 
    
     <tr><td></td><td>
