--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
 </div>
 <div class="panel panel-default" id="forms">
 <div class="panel-heading">
+
 <form role="form" id="theForm" name="myForm" method="POST" action="stl.cfm">
 <fieldset>
-<legend>Add your email here to hear about new events and activities!</legend>
+<legend>Contact</legend>
 <div class="form-group row top-20">
 <div class="col-sm-2 col-sm-offset-1">
 <label for="add_email" class="control-label form-adjust">Email*</label>
@@ -96,6 +97,7 @@
 </div>
 </fieldset>
 </form>
+  
 </div>
 </div>
 
