--- a/index.html
+++ b/index.html
@@ -76,27 +76,7 @@
 <div class="panel panel-default" id="forms">
 <div class="panel-heading">
 
-<form role="form" id="theForm" name="myForm" method="POST" action="stl.cfm">
-<fieldset>
-<legend>Contact</legend>
-<div class="form-group row top-20">
-<div class="col-sm-2 col-sm-offset-1">
-<label for="add_email" class="control-label form-adjust">Email*</label>
-</div>
-<div class="col-sm-6 form-adjust">
-<input type="text" class="form-control" id="add_email" name="add_email" placeholder="Email" value maxlength="128" required><i class="form-control-feedback glyphicon glyphicon-remove"></i>
-</div>
-</div>
-</fieldset>
-<input type="Hidden" name="list_name" value="ACMW614-MEMBERS">
-<fieldset>
-<div class="form-group row top-20">
-<div class="col-sm-11 col-sm-offset-1">
-<input id="subscribe" name="subscribe" type="submit" value="Sign Up" class="btn btn-primary form-adjust">
-</div>
-</div>
-</fieldset>
-</form>
+<a href="https://signup.acm.org/listserv_index.cfm?ln=ACMW614-MEMBERS">Subscribe to hear about our upcoming events and activities!</a> 
   
 </div>
 </div>
