--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
 
 <h2>Events </h2>
 
-<p>
-<a href="https://signup.acm.org/listserv_index.cfm?ln=ACMW614-MEMBERS">Subscribe to hear about our upcoming events and activities!</a> 
+<table>
+<tr><td>
+ <p> <a href="mailto:LISTSERV@listserv.acm.org?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Subscribe%20ACMW614-MEMBERS&body=Subscribe%20ACMW614-MEMBERS" target="_top">Subscribe </a>to hear about our upcoming events and activities! </p>
+  
+<p>NOTE: If you don't have email installed on your browser, you may send an email directly to listserv[at]listserv.acm.org with this in the body of your message: “Subscribe ACMW614-MEMBERS”. You will receive a response from Listserv asking you to confirm your request. Once you’ve confirmed, you will be added to our email list.
 </p>
-
+</td></tr>
+</table>
 
   <table> 
    
-    <tr><td></td><td>
+    <tr><td>
     <iframe src="https://calendar.google.com/calendar/embed?height=300&wkst=1&bgcolor=%23B39DDB&ctz=America%2FNew_York&mode=AGENDA&showTabs=0&showPrint=0&showCalendars=0&title=614ACMW%20Events&src=MjJhODlkZjczOTEyMjYyMTExZDg5OThkOWFhODViNWViZjM2M2U4YjdmMDdmZDc4ZTJmM2RiYWQzMTVlODVhYkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=aWc4dHA0b2huazJxYjQzMWN0ZG9wYnZ2NTBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=czhsMzdicjh1b2pvbnBiazM0OXRybm8zOThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23F09300&color=%237986CB&color=%233F51B5" style="border:solid 1px #777" width="800" height="300" frameborder="0" scrolling="no"></iframe>
       </td></tr>
   </table>
@@ -93,7 +97,6 @@
     <td><p>Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook </a> group.</p>    </td>
   </table>
   
-
  
 <h2 id="about">About ACM-W, ACM and 614ACMW</h2>
 
