--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <table>
 <tr><td>
- <p> <a href="mailto:LISTSERV@listserv.acm.org?subject=Subscribe%20ACMW614-MEMBERS&body=Subscribe%20ACMW614-MEMBERS" target="_top">Subscribe </a>to hear about our upcoming events and activities! </p>
+ <p> <a href="mailto:LISTSERV@listserv.acm.org?subject=Subscribe%20ACMW614-MEMBERS&body=Subscribe%20ACMW614-MEMBERS%20FirstName%20LastName" target="_top">Subscribe </a>to hear about our upcoming events and activities! </p>
   
-<p>NOTE: If you don't have email installed on your browser, you may send an email directly to listserv[at]listserv.acm.org with this in the body of your message: “Subscribe ACMW614-MEMBERS”. You will receive a response from Listserv asking you to confirm your request. Once you’ve confirmed, you will be added to our email list.
+<p>NOTE: If you don't have email installed on your browser, you may send an email directly to listserv[at]listserv.acm.org with this in the body of your message: “Subscribe ACMW614-MEMBERS YourFirstName YourLastName”. You will receive a response from Listserv confirming your request. Once our officers approve your request, you will be added to our email list.
 </p>
 </td></tr>
 </table>
