--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <table>
 <tr><td>
- <p> <a href="mailto:LISTSERV@listserv.acm.org?subject=Subscribe%20ACMW614-MEMBERS&body=Subscribe%20ACMW614-MEMBERS%20FirstName%20LastName" target="_top">Subscribe </a>to hear about our upcoming events and activities! </p>
+ <p> <a href="mailto:614acmw.bb@gmail.com?subject=Join+ACMW614-MEMBERS&body=Sign+me+up+ACMW614-MEMBERS+FirstName+LastName+email" target="_top">Subscribe </a>to hear about our upcoming events and activities! </p>
   
 <p>NOTE: If you don't have email installed on your browser, you may send an email directly to listserv[at]listserv.acm.org with this in the body of your message: “Subscribe ACMW614-MEMBERS YourFirstName YourLastName”. You will receive a response from Listserv confirming your request. Once our officers approve your request, you will be added to our email list.
 </p>
@@ -126,6 +126,8 @@
 
   <dt><a href="https://www.linkedin.com/in/lexius-waltar/">Lexius Waltar</a></dt>
   <dt><a href="https://www.linkedin.com/in/snydersamantha/">Samantha Snyder</a></dt>
+  <dt><a href="https://www.linkedin.com/in/saba-ayad/">Sabah Ayad</a></dt>
+  <dt><a href="https://www.linkedin.com/in/helena-a-332a3030a/">Helena Asfaw</a></dt>
 
 </dl>
 
