--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
 </td></tr>
 </table>
 
+  <table>
+    <tr>
+      <td><a href="https://www.meetup.com/acm-w-central-ohio/"><img src="meetup-logo.png" height="50" width="50" alt="meetup logo"></a></td>
+      <td><a href="https://www.meetup.com/acm-w-central-ohio/">Join our meetup group</a> to find and register for all upcoming events</td>
+    </tr>
+  </table>
   <table> 
    
     <tr><td>
