--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
 <div class="content">
 <p> </p>
-<p>614ACMW is a local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings are a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
+<p>614ACMW is a local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings are a mix of in-person and online, and include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter collaborates with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
 </p>
 
 <h2 id="membership">Member Requirements</h2>
